make sure search-box is at top of screen on mobile views [touch: 8808]

--- a/admin_pages/registrations/assets/espresso_registrations_admin.css
+++ b/admin_pages/registrations/assets/espresso_registrations_admin.css
@@ -300,6 +300,11 @@
 		margin-left: 20px;
 		margin-top: 5px;
 	}
+
+	p.search-box {
+		position: relative;
+		top: 0;
+	}
 }
 
 /*pending payment*/
